--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     playsinline
                 ></video>
                 <audio 
-                       id="eventspace" 
+                       id="aud" 
                        src="assets/eventspace.mp3" 
                        preload="auto"
                        preload="auto"
@@ -87,7 +87,7 @@
                     class="clickable"
                     gesture-handler
                 ></a-video>
-                <a-entity sound="src: #eventspace"></a-entity>
+                <a-entity sound="src: #aud"></a-entity>
             </a-marker>
 
             <a-entity camera></a-entity>
