--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <a-assets>
                 <video
                     id="vid"
-                    src="assets/promo.mp4"
+                    src="assets/asset.mp4"
                     preload="auto"
                     response-type="arraybuffer"
                     loop
