--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     class="clickable"
                     gesture-handler
                 ></a-video>
-                <a-entity sound="src:#aud"></a-entity>
+                <a-entity sound="src:#aud; on:click; volume"></a-entity>
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
