--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     class="clickable"
                     gesture-handler
                 ></a-video>
-                <a—sound src=“#aud” autoplay="true"><a-sound>
+                <a—sound src="#aud" autoplay="true"><a-sound>
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
