--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
                 ></video>
                 <audio 
                        id="aud" 
-                       src="assets/eventspace.mp3" 
+                       src="assets/eventspace.mp3"
+                       preload="auto"
                 ></audio>
             </a-assets>
 
