--- a/index.html
+++ b/index.html
@@ -11,22 +11,37 @@
                 init: function () {
                     var marker = this.el;
                     this.vid = document.querySelector("#vid");
-                    this.aud = document.querySelector("#aud");
 
                     marker.addEventListener('markerFound', function () {
                         this.toggle = true;
                         this.vid.play();
-                        this.aud.play();
                     }.bind(this));
 
                     marker.addEventListener('markerLost', function () {
                         this.toggle = false;
                         this.vid.pause();
-                        this.aud.pause();
                     }.bind(this));
                 },
             });
         </script>
+        <script>
+  AFRAME.registerComponent('audiohandler', {
+    init: function() {
+      let playing = false;
+      let audio = document.querySelector("#neigh");
+      this.el.addEventListener('click', () => {
+        if (!playing) {
+          audio.play();
+        } else {
+          audio.pause();
+          audio.currentTime = 0;
+        }
+        playing = !playing;
+      });
+    }
+  })
+</script>
+        
     </head>
 
     <body style="margin: 0; overflow: hidden;">
@@ -52,7 +67,8 @@
                     playsinline
                 ></video>
                 <audio 
-                       id="aud" 
+                       id="neigh"
+                       crossorigin="anonymous"
                        src="assets/eventspace.mp3"
                        preload="auto"
                 ></audio>
@@ -80,12 +96,8 @@
                     class="clickable"
                     gesture-handler
                 ></a-video>
-            <a-entity
-                sound="src: #aud"
-                play-sound-on-event="mode: toggle-stop; event: click"
-                >
-    </a-entity>
-
+                
+            <a-box position="0  0 -1" audiohandler> </a-box>
             </a-marker>
             <a-entity camera></a-entity>
         </a-scene>
